# ivans-workflow

./: .env.example  .gitignore  .nextcloudignore  CHANGELOG.md  LICENSE  README.md  gemini-review-prompt.md  install.sh  iwo.service  pyproject.toml  requirements.txt  uninstall.sh  update.sh
docs/: AGENT-007-IMPLEMENTATION-PLAN.md  AGENT-REFERENCE.md  ARCHITECTURE.md  BUG-REPORT-2026-02-21-state-detection.md  CHANGELOG-FIXES.md  CUSTOMIZATION.md  FIX-2026-02-22-notification-storm.md  GETTING-STARTED.md  IMPLEMENTATION-PLAN.md  INSTALLATION.md  IWO-BORG-RECOVERY-PROMPT.md  IWO-HEADLESS-DISPATCH-PLAN.md  IWO-HEADLESS-IMPLEMENTATION-PROMPT.md  IWO-IWF-BUGFIX-PROMPT.md  IWO-TUI-Manual.md  IWO-n8n-decision-2026-02-22.md  IWO-stabilisation-todo.md  OPS-ACTIONS-MANUAL.md  OPS-ACTIONS-PLAN.md  OPS-AGENT-GAP-ANALYSIS-PROMPT.md  OPS-AGENT-IMPLEMENTATION.md  OPS-AGENT-PEER-REVIEW-REPORT.md  P0-ERROR-PROPAGATION-BUILDER-PROMPT.md  PAL-PEER-REVIEW-PROMPT.md  RECONSTRUCT-OPS-AGENT-PROMPT.md  REVIEW-PROMPT.md  TECHNICAL-DOCUMENTATION.md  TROUBLESHOOTING.md  ops-agent-architecture-prompt.md
iwo/: __init__.py  auditor.py  commander.py  config.py  daemon.py  directives.py  headless_commander.py  memory.py  metrics.py  ops_actions.py  parser.py  pipeline.py  state.py  tui.py
iwo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: directive-next-spec.sh  directive-resolve-ops.sh  kanban-dashboard-restart.sh  kanban-dashboard-start.sh  kanban-dashboard-stop.sh  launch-tmux-agents.sh  migrate_patterns_384_to_1024.py  monitor-agents.sh  seed-ops-backlog.py  (+3 more)
(+58 files in other folders)
