[project]
name = "iwo"
version = "0.5.0"
description = "Ivan's Workflow Orchestrator - Automated handoffs for Claude Code multi-agent workflows"
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.37.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
iwo = "iwo.daemon:main"
